--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ permissions:
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
 
 concurrency:
@@ -26,5 +26,5 @@ jobs:
         run: cargo build --release --all-targets
       - uses: actions/upload-artifact@v4
         with:
-          path: target/release/experimental
+          path: target/release/this-is-the-sway
           if-no-files-found: error
