--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,7 +12,7 @@ permissions:
 # built once.
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
 # If new code is pushed to a PR branch, then cancel in progress workflows for that PR. Ensures that
 # we don't waste CI time, and returns results quicker https://github.com/jonhoo/rust-ci-conf/pull/5
@@ -81,17 +81,3 @@ jobs:
         run: cargo doc --no-deps --all-features
         env:
           RUSTDOCFLAGS: --cfg docsrs
-  shaders:
-    # uses https://github.com/PolyMeilex/cargo-wgsl to check shaders
-    runs-on: ubuntu-latest
-    name: nightly / shaders
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-      - name: Install nightly
-        uses: dtolnay/rust-toolchain@nightly
-      - name: cargo install cargo-wgsl
-        run: cargo install cargo-wgsl
-      - name: cargo wgsl
-        run: cargo wgsl
